[project]
name = "compile-pdf-core"
version = "0.1.0"
description = "CompilePDF core — shared lineage, retention, cache, auth, and task infrastructure for the CompilePDF producer family."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Print With Synergy", email = "iam@quincy.codes" }]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "fastapi>=0.110",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "celery[redis]>=5.3",
  "redis>=5.0",
  "boto3>=1.34",
  "httpx>=0.27",
  "click>=8.1",
  "structlog>=24.1",
  "prometheus-client>=0.20",
  "ulid-py>=1.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.9",
  "types-redis",
]

[project.urls]
Homepage = "https://compilepdf.com"
Repository = "https://github.com/printwithsynergy/compile-pdf-core"
Issues = "https://github.com/printwithsynergy/compile-pdf-core/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compile_pdf_core"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "C4", "RET"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "celery", "celery.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/compile_pdf_core"]
branch = true
